style: overflow x problem fixed

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@ body {
 code {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+* {
+  box-sizing: border-box;
+}
